# scrad

./: .gitignore  build.sbt
.github/workflows/: scala.yml
project/: plugins.sbt
service/example_graphql/: app.py  pyproject.toml
service/gateway/: package-lock.json  package.json  server.ts  tsconfig.json
src/main/scala/: Account.scala  Utility.scala
src/test/scala/: AccountTest.scala  RiskUnawareLinearUtilityTest.scala
