[tool.poetry]
name = "example_graphql"
version = "0.1.0"
description = ""
authors = ["Michael Ullrich <mullrichael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = "^0.97.0"
starlette = "^0.17.0"
uvicorn = "^0.17.5"
taskipy = "^1.10.1"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
server = "uvicorn app:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
